build: do not use AC_PROG_CC_C99 with autoconf >= 2.70
That macro is obsolete in recent versions of autoconf and its effect
is achieved by AC_PROG_CC.

2023-08-20  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Do not use AC_PROG_CC_C99 with autoconf >= 2.70.

--- a/configure.ac
+++ b/configure.ac
@@ -73,7 +73,9 @@ gl_EARLY
 libpoke_EARLY
 
 LT_INIT
-AC_PROG_CC_C99
+AC_PROG_CC
+dnl AC_PROG_CC_C99 is to be used with autoconf < 2.70.
+m4_version_prereq([2.70], [:], [AC_PROG_CC_C99])
 AM_PROG_CC_C_O
 
 AC_ARG_VAR([LEX], [The flex implementation to use.])
