pokefmt: add template system to embed Poke code in files
2023-09-19  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* configure.ac (AC_CONFIG_FILES): Add `pokefmt/Makefile'.
	* Makefile.am (SUBDIRS): Add `pokefmt'.
	* pokefmt/pokefmt.l: New template system to embed Poke code in docs,
	tests, etc.
	* pokefmt/pokefmt.pk: Poke support code for `pokefmt' app.
	* pokefmt/Makefile.am: New file.
	* run.in (POKEFMTAPPDIR): New variable.

--- a/configure.ac
+++ b/configure.ac
@@ -277,6 +277,7 @@ AC_CONFIG_FILES(Makefile
                 libpoke/pkl-config.pk
                 poke/Makefile
                 poked/Makefile
+                pokefmt/Makefile
                 utils/Makefile
                 pickles/Makefile
                 maps/Makefile
