pokefmt: add template system to embed Poke code in files
2023-09-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* configure.ac (AC_CONFIG_FILES): Add `pokefmt/Makefile'.
	* Makefile.am (SUBDIRS): Add `pokefmt'.
	* pokefmt/pokefmt.l: New template system to embed Poke code in docs,
	tests, etc.
	* pokefmt/pokefmt.pk: Poke support code for `pokefmt' app.
	* pokefmt/Makefile.am: New file.
	* run.in (POKEFMTAPPDIR): New variable.
	* poke.pokefmt/pokefmt.exp: New tests.
	* testsuite/Makefile.am (check-DEJAGNU): Add `POKEFMTAPPDIR' env var.
	(EXTRA_DIST): Update.
	* doc/poke.texi (pokefmt): Add new chapter.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -36,6 +36,7 @@ if HAVE_DEJAGNU
           POKECMDSDIR="$(top_srcdir)/poke" \
           POKEDOCDIR="$(top_builddir)/doc" \
           POKE_LOAD_PATH="$(top_srcdir)/poke" \
+          POKEFMTAPPDIR="$(top_srcdir)/pokefmt" \
 		$$runtest --tool $(DEJATOOL) --srcdir $${srcdir} --objdir $(builddir) \
                         SHELL="$(SHELL)" \
 			$(RUNTESTFLAGS) || exit $$1; \
@@ -2798,6 +2799,7 @@ EXTRA_DIST = \
   poke.pktest/pktest-10.pk \
   poke.pktest/pktest-11.pk \
   poke.pktest/pktest-12.pk \
+  poke.pokefmt/pokefmt.exp \
   poke.pvm/pvm-insns-test.pk \
   poke.repl/repl.exp \
   poke.std/std.exp \
