--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -17,7 +17,7 @@
 
 picklesdir = $(pkgdatadir)/pickles
 dist_pickles_DATA = ctf.pk ctf-dump.pk leb128.pk \
-                    bpf.pk btf.pk btf-ext.pk btf-dump.pk bmp.pk \
+                    bpf.pk btf.pk btf-ext.pk btf-dump.pk bmp.pk gcov.pk \
                     color.pk rgb24.pk id3v1.pk ios.pk diff.pk pk-table.pk \
 		    sframe.pk sframe-dump.pk \
                     time.pk argp.pk pktest.pk mbr.pk ustar.pk \
