testsuite: add new test struct-ind-5.pk
2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/struct-ind-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2519,6 +2519,7 @@ EXTRA_DIST = \
   poke.pkl/struct-ind-2.pk \
   poke.pkl/struct-ind-3.pk \
   poke.pkl/struct-ind-4.pk \
+  poke.pkl/struct-ind-5.pk \
   poke.pkl/struct-ind-diag-1.pk \
   poke.pkl/struct-ind-diag-2.pk \
   poke.pkl/struct-ind-diag-3.pk \
