pickles: new pickle linux.pk and little fix in ios.pk
This patch:

- Adds a new pickle linux.pk, with kernel data structures.  At the
  moment it is just Linux_Version_Code.

- Little fix in ios_dump_bytes, that makes dump :val to use the right
  IO space, i.e. the one where the given value is mapped.

2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/linux.pk: New file.
	* pickles/Makefile.am (dist_pickles_DATA): Distribute linux.pk.
	* pickles/ios.pk (ios_dump_bytes): Always use the IOS of :val if
	present.

--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -27,6 +27,6 @@ dist_pickles_DATA = ctf.pk ctf-dump.pk leb128.pk \
                     pe-m32r.pk pe-mips.pk pe-ppc.pk pe-sh3.pk pe-riscv.pk pe-debug.pk \
 		    uuid.pk redoxfs.pk pcap.pk ieee754.pk pdap.pk \
                     iscan.pk iscan-str.pk base64.pk gpt-partition-attrs.pk \
-		    gpt-partition-types.pk gpt.pk guid.pk
+		    gpt-partition-types.pk gpt.pk guid.pk linux.pk
 
 EXTRA_DIST = README.elf
