pickles: new pickle srec.pk to edit Motorola SREC files
2023-11-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_ps_var): Fix detection of
	non-methods.
	* testsuite/poke.pkl/optcond-pre-13.pk: New test.
	* testsuite/poke.pkl/optcond-pre-14.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* pickles/Makefile.am (dist_pickles_DATA): Distribute srec.pk.
	* testsuite/poke.pickles/srec-test.pk: New file.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -621,6 +621,7 @@ EXTRA_DIST = \
   poke.pickles/pe-test.pk \
   poke.pickles/riscv-test.pk \
   poke.pickles/sframe-test.pk \
+  poke.pickles/srec-test.pk \
   poke.pickles/search-test.pk \
   poke.pickles/ustar-test.pk \
   poke.pickles/color-test.pk \
