pkl-gen: fix checking of E_elem in struct function bodies
2023-11-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_ps_var): Fix detection of
	non-methods.
	* testsuite/poke.pkl/optcond-pre-13.pk: New test.
	* testsuite/poke.pkl/optcond-pre-14.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2041,6 +2041,8 @@ EXTRA_DIST = \
   poke.pkl/optcond-pre-10.pk \
   poke.pkl/optcond-pre-11.pk \
   poke.pkl/optcond-pre-12.pk \
+  poke.pkl/optcond-pre-13.pk \
+  poke.pkl/optcond-pre-14.pk \
   poke.pkl/optcond-pre-2.pk \
   poke.pkl/optcond-pre-3.pk \
   poke.pkl/optcond-pre-4.pk \
