pkl: error at compile-time for arrays with impossible boundaries
2023-11-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify2_ps_type_array): Sanity check
	fixed size bounds.
	* testsuite/poke.map/maps-unions-14.pk: Adapt test.
	* testsuite/poke.map/maps-unions-15.pk: Likewise.
	* testsuite/poke.map/maps-unions-16.pk: Likewise.
	* testsuite/poke.pkl/scons-union-14.pk: Likewise.
	* testsuite/poke.pkl/scons-union-13.pk: Likewise.
	* testsuite/poke.pkl/scons-union-12.pk: Likewise.
	* testsuite/poke.pkl/array-siz-diag-2.pk: New test.
	* testsuite/poke.pkl/array-siz-diag-3.pk: Likewise.
	* testsuite/poke.pkl/array-siz-2.pk: Likewise.
	* testsuite/poke.pkl/array-siz-3.pk: Likewise.
	* testsuite/poke.pkl/cast-array-siz-diag-1.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -782,7 +782,11 @@ EXTRA_DIST = \
   poke.pkl/array-diag-1.pk \
   poke.pkl/array-diag-3.pk \
   poke.pkl/array-siz-1.pk \
+  poke.pkl/array-siz-2.pk \
+  poke.pkl/array-siz-3.pk \
   poke.pkl/array-siz-diag-1.pk \
+  poke.pkl/array-siz-diag-2.pk \
+  poke.pkl/array-siz-diag-3.pk \
   poke.pkl/array-type-1.pk \
   poke.pkl/array-type-diag-1.pk \
   poke.pkl/array-type-diag-2.pk \
