pickles,utils: add pickle and util for JojoDiff
JojoDiff provides two utilities:
  - JDIFF
  - JPATCH

JDIFF is a program that outputs the differences between two (binary)
files.  This commit adds pickle for the patch format.

pk-jojopatch is the Poke implementation of JPTCH program that can be
used to reconstruct the second file from the first file.

2023-12-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/jojodiff.pk: New pickle for JojoDiff utility.
	* pickles/Makefile.am (dist_pickles_DATA): Add `jojodiff.pk'.
	* utils/pk-jojopatch.in: New Poke script to apply JojoDiff patches
	to files.
	* utils/Makefile.am (pk-jojopatch): Add rule for `pk-jojopatch'.

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -32,3 +32,7 @@ pk-strings: pk-strings.in Makefile
 pk-bin2poke: pk-bin2poke.in Makefile
 	$(do_subst) < $(srcdir)/pk-bin2poke.in > pk-bin2poke
 	chmod +x pk-bin2poke
+
+pk-jojopatch: pk-jojopatch.in Makefile
+	$(do_subst) < $(srcdir)/pk-jojopatch.in > pk-jojopatch
+	chmod +x pk-jojopatch
