--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -15,9 +15,9 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-bin_SCRIPTS = pk-elfextractor pk-strings pk-bin2poke
+bin_SCRIPTS = pk-elfextractor pk-strings pk-bin2poke pk-jojopatch
 CLEANFILES = $(bin_SCRIPTS)
-EXTRA_DIST = pk-elfextractor.in pk-strings.in pk-bin2poke.in
+EXTRA_DIST = pk-elfextractor.in pk-strings.in pk-bin2poke.in pk-jojopatch.in
 
 do_subst = sed -e 's,[@]bindir[@],$(bindir),g'
 
