Add io space MMAP for memory mapping devices and files
2024-01-14  Andreas Klinger  <ak@it-klinger.de>

	* libpoke/ios-dev-mmap.c: New file.
        * libpoke/Makefile.am (libpoke_la_SOURCES): Add ios-dev-mmap.c
        * libpoke/ios.c (IOS_DEV_MMAP): Define.
          (ios_dev_ifs): Initialize IOS_DEV_MMAP.
        * poke/pk-cmd-ios.c (pk_cmd_mmap): New function.
        * poke/pk-cmd.c (dot_cmds): Add mmap_cmd.
        * poke/pk-help.pk: Add help text for .mmap.
        * doc/poke.texi (mmap command): New section.
	                (file command): Add reference to .mmap.
        * testsuite/Makefile.am (EXTRA_DIST): Add mmap-{1,2,3}.pk.
        * testsuite/poke.cmd/mmap-1.pk: New file.
        * testsuite/poke.cmd/mmap-2.pk: New file.
        * libpoke/ios-dev.h: New define IOD_EMMAP.
        * libpoke/libpoke.h: New define PK_IOD_EMMAP.
        * libpoke/std.pk: New function openmmap.
        * bootstrap.conf (libpoke_modules): Add getpagesize.

--- a/configure.ac
+++ b/configure.ac
@@ -196,6 +196,11 @@ else
 fi
 AM_CONDITIONAL([NBD], [test "x$libnbd_enabled" = "xyes"])
 
+dnl Check for mmap
+AC_FUNC_MMAP
+
+AM_CONDITIONAL([HAVE_MMAP], [test "x$ac_cv_func_mmap_fixed_mapped" = "xyes"])
+
 dnl Used in Makefile.am.  See the note there.
 WITH_JITTER=$with_jitter
 AC_SUBST([WITH_JITTER])
