testsuite: add `pvm.exp' to EXTRA_DIST
2024-01-20  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/Makefile.am (EXTRA_DIST): Add `poke.pvm/pvm.exp'.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2817,6 +2817,7 @@ EXTRA_DIST = \
   poke.pktest/pktest-11.pk \
   poke.pktest/pktest-12.pk \
   poke.pokefmt/pokefmt.exp \
+  poke.pvm/pvm.exp \
   poke.pvm/pvm-insns-test.pk \
   poke.repl/repl.exp \
   poke.std/std.exp \
