GNU poke 3.90.1 and pokefmt
The pokefmt saga is not solved. When I
- take poke 3.90.1,
- build it with CC and CXX values that use clang with ASAN and UBSAN,
- do "make install" of these binaries,
- build it again, this time with CC="clang" and CXX="clang++",
I again get test failures related to pokefmt:

================================================================================
Making a new site.exp file ...
Using ../../testsuite/lib/poke.exp as tool init file.
Test run by bruno on Mon Jan 22 18:39:52 2024
Native configuration is x86_64-pc-linux-gnu

                === poke tests ===

Schedule of variations:
    unix

Running target unix
Using /usr/share/dejagnu/baseboards/unix.exp as board description file for target.
Using /usr/share/dejagnu/config/unix.exp as generic interface file for target.
Using /build/poke-3.90.1/testsuite/config/unix.exp as tool-and-target-specific interface file.
Running /build/poke-3.90.1/testsuite/poke.cmd/cmd.exp ...
Running /build/poke-3.90.1/testsuite/poke.libpoke/libpoke.exp ...
Running /build/poke-3.90.1/testsuite/poke.map/map.exp ...
Running /build/poke-3.90.1/testsuite/poke.pickles/pickles.exp ...
Running /build/poke-3.90.1/testsuite/poke.pkl/pkl.exp ...
Running /build/poke-3.90.1/testsuite/poke.pktest/pktest.exp ...
Running /build/poke-3.90.1/testsuite/poke.pokefmt/pokefmt.exp ...
ERROR: tcl error sourcing /build/poke-3.90.1/testsuite/poke.pokefmt/pokefmt.exp.
ERROR: /build/poke-3.90.1/build-64-clang/pokefmt/.libs/pokefmt: symbol lookup error: /inst-x86_64-64/lib/libpoke.so.1: undefined symbol: __asan_option_detect_stack_use_after_return
    while executing
"exec $POKEFMT < $fin > $fout"
    (procedure "pokefmt_run" line 12)
    invoked from within
"pokefmt_run 1 "Hi" "Hi""
    (file "/build/poke-3.90.1/testsuite/poke.pokefmt/pokefmt.exp" line 62)
    invoked from within
"source /build/poke-3.90.1/testsuite/poke.pokefmt/pokefmt.exp"
    ("uplevel" body line 1)
    invoked from within
"uplevel #0 source /build/poke-3.90.1/t

--- a/pokefmt/Makefile.am
+++ b/pokefmt/Makefile.am
@@ -78,6 +78,6 @@ pokefmt_CPPFLAGS = -I$(top_srcdir)/common \
                    -I$(top_builddir)/gl -I$(top_srcdir)/gl \
                    -I$(top_srcdir)/libpoke -I$(top_builddir)/libpoke
 pokefmt_CFLAGS = -Wall
-pokefmt_LDADD = $(top_builddir)/gl/libgnu.la \
-                $(top_builddir)/libpoke/libpoke.la
+pokefmt_LDADD = $(top_builddir)/libpoke/libpoke.la \
+                $(top_builddir)/gl/libgnu.la
 pokefmt_LDFLAGS =
