--- a/poked/Makefile.am
+++ b/poked/Makefile.am
@@ -35,7 +35,7 @@ poked_CPPFLAGS = -I$(top_srcdir)/common \
                  -I$(top_builddir)/gl -I$(top_srcdir)/gl \
                  -I$(top_srcdir)/libpoke -I$(top_builddir)/libpoke
 poked_CFLAGS = -Wall
-poked_LDADD = $(top_builddir)/gl/libgnu.la \
-              $(top_builddir)/libpoke/libpoke.la \
+poked_LDADD = $(top_builddir)/libpoke/libpoke.la \
+              $(top_builddir)/gl/libgnu.la \
               -lpthread
 poked_LDFLAGS =
