--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -16,7 +16,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
-# gnulib modules used by poke and poked.
+# gnulib modules used by poke, poked and pokefmt.
 gnulib_modules="
   accept
   access
