Provide an easy way to generate the monolithic HTML-formatted manual.
* doc/Makefile.am (html-monolithic, poke-manual.html): New targets.
(MOSTLYCLEANFILES): Add poke-manual.html.

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,8 @@ config.h.in
 /doc/poke.toc
 /doc/poke.tree
 /doc/poke.tree.err
+/doc/poke.html/
+/doc/poke-manual.html
 /poke/pcl-lex.h
 /GNUmakefile
 /maint.mk
