pvm: make format locale independent
2024-02-23  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (libpoke_modules): Add c-vasprintf and
	c-vsnprintf gnulib modules.
	* libpoke/pvm-wrappers.c: Use c_vaspritnf and c_vsnprintf.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -77,6 +77,8 @@ libpoke_modules="
   configmake
   c-strtof
   c-strtod
+  c-vasprintf
+  c-vsnprintf
   errno
   fopen-gnu
   free-posix
@@ -109,8 +111,6 @@ libpoke_modules="
   tempname
   timespec
   tmpdir
-  vasprintf-posix
-  vsnprintf-posix
   xalloc
   strstr
   lib-symbol-visibility
