run.in: add pokefmt and poked to $PATH
2024-02-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* run.in (PATH): Add pokefmt/ and poked/ to PATH env var.

--- a/run.in
+++ b/run.in
@@ -30,7 +30,7 @@ b=`cd @abs_builddir@ && pwd`
 
 # setup to run uninstalled poke
 set -a
-PATH=$b/poke:$PATH
+PATH=$b/poke:$b/pokefmt:$b/poked:$PATH
 POKEDATADIR=$s/libpoke
 POKECONFIGDIR=$b/libpoke
 POKEINFODIR=$s/doc
