pickles: Add new pickle for jpeg
2024-03-15  Andreas Klinger  <ak@it-klinger.de>

        * pickles/jpeg.pk: New pickle for jpeg files.
        * pickles/Makefile.am (dist_pickles_DATA): Add jpeg.pk.
        * testsuite/poke.pickles/jpeg-test.pk: New test.
        * testsuite/Makefile.am (EXTRA_DIST): Add jpeg-test.pk.

--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -28,6 +28,6 @@ dist_pickles_DATA = ctf.pk ctf-dump.pk leb128.pk \
 		    uuid.pk redoxfs.pk pcap.pk ieee754.pk pdap.pk \
                     iscan.pk iscan-str.pk base64.pk gpt-partition-attrs.pk \
 		    gpt-partition-types.pk gpt.pk guid.pk linux.pk srec.pk \
-		    jojodiff.pk
+		    jojodiff.pk jpeg.pk
 
 EXTRA_DIST = README.elf
