testsuite: disable poke.cmd/mmap-1.pk on Darwin (macOS)
On macOS, /dev/zero is not mappable.

2024-03-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/Makefile.am (check-DEJAGNU): Set `HOST_OS' env var.
	* testsuite/lib/poke-dg.exp (dg-require): Add "no-darwin"
	requirement.
	* testsuite/poke.cmd/mmap-1.pk: Disable the test on Darwin.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -25,6 +25,7 @@ if HAVE_DEJAGNU
 	if $(SHELL) -c "$$runtest --version" > /dev/null 2>&1; then \
 	  echo set enable-bracketed-paste off > "$(top_builddir)/inputrc"; \
 	  CC_FOR_TARGET="$(CC_FOR_TARGET)" CFLAGS_FOR_TARGET="$(CFLAGS)" \
+	  HOST_OS="$(host_os)" \
 	  HAVE_LIBTEXTSTYLE="$(HAVE_LIBTEXTSTYLE)" \
 	  NBDKIT="$(NBDKIT)" \
 	  INPUTRC="$(top_builddir)/inputrc" \
