pkl: fix integer and offset casts
2024-03-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-fold.c (pkl_fold_ps_cast): Fix integer cast by
	adding missing conditional sign-extension operation.
	Also fix offset casting to work with negative magnitudes by
	using signed division, masking and conditional sign extension.
	* libpoke/pkl-gen.pks (offset_cast): Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* testsuite/poke.pkl/cast-integers-20.pk: New test.
	* testsuite/poke.pkl/cast-integers-21.pk: Likewise.
	* testsuite/poke.pkl/cast-integers-22.pk: Likewise.
	* testsuite/poke.pkl/cast-offsets-6.pk: Likewise.
	* testsuite/poke.pkl/cast-offsets-7.pk: Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1142,6 +1142,9 @@ EXTRA_DIST = \
   poke.pkl/cast-integers-17.pk \
   poke.pkl/cast-integers-18.pk \
   poke.pkl/cast-integers-19.pk \
+  poke.pkl/cast-integers-20.pk \
+  poke.pkl/cast-integers-21.pk \
+  poke.pkl/cast-integers-22.pk \
   poke.pkl/cast-int-struct-1.pk \
   poke.pkl/cast-int-struct-2.pk \
   poke.pkl/cast-int-struct-3.pk \
@@ -1151,6 +1154,8 @@ EXTRA_DIST = \
   poke.pkl/cast-offsets-3.pk \
   poke.pkl/cast-offsets-4.pk \
   poke.pkl/cast-offsets-5.pk \
+  poke.pkl/cast-offsets-6.pk \
+  poke.pkl/cast-offsets-7.pk \
   poke.pkl/cast-offsets-diag-1.pk \
   poke.pkl/cast-offsets-diag-2.pk \
   poke.pkl/cast-offsets-diag-3.pk \
