pkl: add support for suffix for integral arrays
With this commit user can specify a suffix for integral array
literals:
	[1,2,3]UB == [1UB,2UB,3UB]
	[1,0xff,-1]U == [1U,0xffU,0xffffffffU]

All suffixes for integers are supported:
	t, T, n, N, b, B, h, H, l, L
	ut, UT, un, UN, ub, UB, uh, UH, ul, UL

2024-04-07  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/poke.texi (Array Literals): Document new feature.
	* libpoke/pkl-ast.h (PKL_AST_ARRAY_ELEM_CAST): New accessor
	macro.
	(elem_cast): New field which contains the type which should
	be the target of the cast.
	* libpoke/pkl-ast.c (pkl_ast_node_free_1): Handle new field.
	* libpoke/pkl-lex.l (parse_integer_literal_suffix): New function.
	("]"{IS}): New rule to support array literals with suffix, e.g.,
	`[1,2,3]UB' to be the same as `[1UB,2UB,3UB]'.
	(integral literals rule): Use `parse_integer_literal_suffix'.
	* libpoke/pkl-tab.y (ARRSUF): New token for closing bracket with
	suffix: ]U, ]UB, etc.
	(array): Add support for suffix for array literals.
	* libpoke/pkl-typify.c (pkl_typify1_ps_array): Add check to verify
	user is using suffix only for integral promotable arrays.
	* libpoke/pkl-promo.c (pkl_promo_ps_array): New phase to add casts
	to all elements of the array if array has a suffix.
	(pkl_phase_promo): Register `pkl_promo_ps_array'.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* testsuite/poke.pkl/array-4.pk: New test.
	* testsuite/poke.pkl/array-5.pk: Likewise.
	* testsuite/poke.pkl/array-6.pk: Likewise.
	* testsuite/poke.pkl/array-7.pk: Likewise.
	* testsuite/poke.pkl/array-8.pk: Likewise.
	* testsuite/poke.pkl/array-9.pk: Likewise.
	* testsuite/poke.pkl/array-10.pk: Likewise.
	* testsuite/poke.pkl/array-11.pk: Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -777,6 +777,14 @@ EXTRA_DIST = \
   poke.pkl/array-1.pk \
   poke.pkl/array-2.pk \
   poke.pkl/array-3.pk \
+  poke.pkl/array-4.pk \
+  poke.pkl/array-5.pk \
+  poke.pkl/array-6.pk \
+  poke.pkl/array-7.pk \
+  poke.pkl/array-8.pk \
+  poke.pkl/array-9.pk \
+  poke.pkl/array-10.pk \
+  poke.pkl/array-11.pk \
   poke.pkl/array-bound-1.pk \
   poke.pkl/array-bound-2.pk \
   poke.pkl/array-bound-3.pk \
@@ -786,6 +794,7 @@ EXTRA_DIST = \
   poke.pkl/array-bound-7.pk \
   poke.pkl/array-bound-diag-1.pk \
   poke.pkl/array-diag-1.pk \
+  poke.pkl/array-diag-2.pk \
   poke.pkl/array-diag-3.pk \
   poke.pkl/array-siz-1.pk \
   poke.pkl/array-siz-2.pk \
