pkl: fix codegen for EXCOND containing break/continue
The following Poke snippets no longer crash the compiler:

  Sample 1:

    whlie (condition)
      { break; } ?! E_elem;

  Sample 2:

    whlie (condition)
      { continue; } ?! E_elem;

2024-04-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_BREAK_CONTINUE_STMT_NPOPES): New
	macro.
	(struct pkl_ast_break_continue_stmt): New field `npopes' to keep
	track of number of `pope' instructions.
	* libpoke/pkl-trans.h (struct pkl_trans_escapable_ctx): Add new
	field `npopes'.
	* libpoke/pkl-trans.c (pkl_trans1_pr_comp_stmt): For EXCOND
	expression statements, only keep track of number of `pope' insns.
	(pkl_trans1_ps_comp_stmt): Likewise.
	(pkl_trans1_ps_break_continue_stmt): Update the node with the number
	of `pope' insns.
	* libpoke/pkl-gen.c (pkl_gen_ps_break_continue_stmt): Emit `pope'
	instruction(s).
	(pkl_gen_pr_op_excond): Push the failure result after evaluation
	of the EXCOND's LHS.
	* testsuite/poke.pkl/excond-6.pk: New test.
	* testsuite/poke.pkl/excond-7.pk: Likewise.
	* testsuite/poke.pkl/excond-8.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1403,6 +1403,9 @@ EXTRA_DIST = \
   poke.pkl/excond-3.pk \
   poke.pkl/excond-4.pk \
   poke.pkl/excond-5.pk \
+  poke.pkl/excond-6.pk \
+  poke.pkl/excond-7.pk \
+  poke.pkl/excond-8.pk \
   poke.pkl/excond-diag-1.pk \
   poke.pkl/field-init-1.pk \
   poke.pkl/field-init-2.pk \
