pkl,pvm: proper support for typedefs and aliased types
2024-06-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.c (pkl_call_node_handlers): Use
	PKL_AST_TYPE_CODE2 instead of PKL_AST_TYPE_CODE.
	(pkl_do_pass_1): Likewise.
	* libpoke/pkl-tab.y: Pass the ast to pkl_env_register.
	(TYPENAME): Add a type alias node instead of the aliased type to
	the AST.
	* libpoke/pkl-typify.c (pkl_typify1_ps_op_typeof): Create a named
	type.
	* libpoke/pkl.c (pkl_defvar): Pass the ast to pkl_env_register.
	* libpoke/pvm-val.c (pvm_make_struct_type): Do not get a `name' argument.
	(pvm_type_equal_p): Struct types may have PVM_NULL as name.
	(pvm_make_exception): Set struct type name explicitly.
	* libpoke/pvm.jitter (mktysct): Do not get a type name argument.
	(tysctsetn): New instruction.
	* testsuite/poke.pkl/redef-diag-7.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* libpoke/pkl-insn.def: New instruction tysctsetn.
	* libpoke/pkl-gen.pks (field_location_str): Get the name of the
	struct type in an argument.
	(check_struct_field_constraint): Likewise.
	(handle_struct_field_constraints): Likewise.
	(struct_field_extractor): Likewise.
	(struct_field_mapper): Likewise.
	(struct_mapper): Likewise.
	(struct_constructor): Likewise.
	(struct_deintegrator): Likewise.
	(typifier_any_any_wrapper): Likewise.
	(typifier_any_any_int_wrapper): Likewise.
	(struct_typifier): Likewise.
	(typeof): Set the name of the Pk_Type struct explicitly.
	(common_typifier): Do not set the field `name' of Pk_Type.
	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Pass type names to RAS
	macros requiring it.
	(pkl_gen_pr_ass_stmt): Use PKL_AST_TYPE_NAMED_P instead of
	PKL_AST_TYPE_NAME to query whether a type is aliased.
	(pkl_gen_pr_func): Likewise.
	(pkl_gen_pr_func_arg): Likewise.
	(pkl_gen_pr_cast): Likewise.
	(pkl_gen_pr_type_array): Likewise.
	(pkl_gen_pr_type_struct): Likewise.
	(pkl_gen_pr_type_alias): New handler.
	* libpoke/pkl-env.c (register_decl): Get an ast argument.
	(regis

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2319,6 +2319,7 @@ EXTRA_DIST = \
   poke.pkl/redef-diag-4.pk \
   poke.pkl/redef-diag-5.pk \
   poke.pkl/redef-diag-6.pk \
+  poke.pkl/redef-diag-7.pk \
   poke.pkl/redef-1.pk \
   poke.pkl/redef-2.pk \
   poke.pkl/redef-3.pk \
