poke: add `.vm disassemble statement'
2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/poke.texi (.vm disassemble): Add new item for new cmd.
	* libpoke/libpoke.h (pk_disassemble_statement): New function.
	* libpoke/libpoke.c (pk_disassemble_statement): Likewise.
	* libpoke/pkl.h (pkl_compile_statement): Likewise.
	* libpoke/pkl.c (pkl_compile_statement): Likewise.
	* poke/pk-cmd-vm.c (pk_cmd_vm_disas_stmt): Likewise.
	(vm_disas_stmt_cmd): New variable.
	(vm_disas_cmds): Add new cmd.
	(vm_disas_cmd): Update help string.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.cmd/vm-disas-stmt.pk): New test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -137,6 +137,7 @@ EXTRA_DIST = \
   poke.cmd/set-omode.pk \
   poke.cmd/sub-1.pk \
   poke.cmd/sub-2.pk \
+  poke.cmd/vm-disas-stmt.pk \
   poke.map/map.exp \
   poke.map/ass-map-1.pk \
   poke.map/ass-map-2.pk \
