pkl: fix (un)escapable tracking in trans phases
2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (PKL_TRANS_PUSH_UNESCAPABLE): Define.
	(pkl_trans1_pr_type_struct): Push unescapable context.
	(pkl_trans1_ps_type_struct): Pop uescapable context.
	(pkl_trans1_pr_type_array): Push unescapable context.
	(pkl_trans1_ps_type_array): Pop uescapable context.
	(pkl_trans1_pr_func): Push unescapable context.
	(pkl_trans1_ps_func): Pop uescapable context.
	* libpoke/pkl-trans.h (PKL_TRANS_MAX_COMP_STMT_NEST): Bump
	to 120.
	* testsuite/poke.pkl/break-diag-2.pk: New test.
	* testsuite/poke.pkl/break-diag-3.pk: Likewise.
	* testsuite/poke.pkl/break-diag-4.pk: Likewise.
	* testsuite/poke.pkl/break-diag-5.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1084,6 +1084,10 @@ EXTRA_DIST = \
   poke.pkl/bnot-offsets-1.pk \
   poke.pkl/bnot-offsets-2.pk \
   poke.pkl/break-diag-1.pk \
+  poke.pkl/break-diag-2.pk \
+  poke.pkl/break-diag-3.pk \
+  poke.pkl/break-diag-4.pk \
+  poke.pkl/break-diag-5.pk \
   poke.pkl/break-for-1.pk \
   poke.pkl/break-while-1.pk \
   poke.pkl/break-while-2.pk \
