pkl: escaping the body of a try-catch statement requires an additional pope
2024-06-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_pr_try_stmt_body): Increase
	npopes in escapable.
	(pkl_trans1_ps_try_stmt_body): Decrease npopes in escapable.
	* testsuite/poke.pkl/break-while-6.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1091,6 +1091,7 @@ EXTRA_DIST = \
   poke.pkl/break-for-1.pk \
   poke.pkl/break-while-1.pk \
   poke.pkl/break-while-2.pk \
+  poke.pkl/break-while-3.pk \
   poke.pkl/builtins-1.pk \
   poke.pkl/cast-any-to-function-diag-1.pk \
   poke.pkl/cast-array-1.pk \
