pkl: turn ICE into compile-time error in pkl_transl_ps_var
After the lexical revamp it is now trivial to detect some cases of
undefined variables that wasn't possible to detect at parse time.

One of such cases is a field that refers to itself in an
initialization expression.

2024-06-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_transl_ps_var): Turn ICE into
	compile-time error.
	* testsuite/poke.pkl/field-init-diag-8.pk: New test.
	* testsuite/poke.pkl/field-init-diag-9.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1444,6 +1444,8 @@ EXTRA_DIST = \
   poke.pkl/field-init-diag-5.pk \
   poke.pkl/field-init-diag-6.pk \
   poke.pkl/field-init-diag-7.pk \
+  poke.pkl/field-init-diag-8.pk \
+  poke.pkl/field-init-diag-9.pk \
   poke.pkl/flush-1.pk \
   poke.pkl/flush-2.pk \
   poke.pkl/flush-3.pk \
