testsuite: add new test array-bound-8.pk
2024-06-09  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/array-bound-8.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -784,6 +784,7 @@ EXTRA_DIST = \
   poke.pkl/array-bound-5.pk \
   poke.pkl/array-bound-6.pk \
   poke.pkl/array-bound-7.pk \
+  poke.pkl/array-bound-8.pk \
   poke.pkl/array-bound-diag-1.pk \
   poke.pkl/array-diag-1.pk \
   poke.pkl/array-diag-3.pk \
